  ###################################
##### Changed in Scannomatic 0.992 #####
   ###################################

*** Improved robustness of orthalogical grayscale detection

*** Improved Analyse One interface so it responds more 'correctly' to grayscale
    detections

*** Added nicer pinning matrix override GUI to analyse project

*** Gridding now has safty-margin from edge of plate-section

*** Changed the animation images

*** Changed so trashed pixels also get a buffer around them on the background

*** Changed so that blob is really a composite blob of all blobs that have
    mass center inside the best blob.

*** New Scan One dialog! Oh so nice...

*** Centroid is not explicitly tracked for blobs and outputted into the
    analysis.xml

*** If grayscale 3rd deg polyfit produces a bad curve (that doesn't 
    continously increase or decrease) for the range of interest, then
    the grayscale fails

*** Analyse One allows for measures in both spaces and using any fixture
    to find grayscale.

*** Fixture respond to what fixture is selected in start experiment!

*** Fixture no longer causes file-crash if conf-file not correct.

*** Fixture creation no longer requires program restart(s) to work properly

*** Added XML-short form and omission of data from XML file that is
    not of interest.

*** Implemented a termination button

*** Implemented support for several scanners connected to same computer
    run in both on and several instances of the program

*** Started using logging for better debugging. Also removes bugs that way.

*** Revamped grayscale detection since it apparently wasn't stable enough.

*** Implemented a project analysis gui

*** Corrected bug in fixture-gui

*** Start experiment GUI now understands fixtures and the analysis script 
    by default use these to determine pinning matrices. A copy of the config 
    file as it was at the time of scanning is also copied to the directory.
